@@ -3,6 +3,10 @@
 	* coders/xcf.c (ReadOneLayer): Reject layer size of 0x0.  Fixes
 	oss-fuzz 6636 "graphicsmagick/coder_XCF_fuzzer: Direct-leak in
 	MagickMallocAligned". (Credit to OSS-Fuzz)
+	(ReadXCFImage): Verify that seek offsets are within the bounds of
+	the file data. Fixes oss-fuzz 6682
+	"graphicsmagick/coder_XCF_fuzzer: Out-of-memory in
+	graphicsmagick_coder_XCF_fuzzer". (Credit to OSS-Fuzz)
 
 	* magick/pixel_cache.c (ModifyCache): Destroy CacheInfo if
 	OpenCache() fails so it is not leaked.
